# RotaFI

./: .env.example  README.md  finish-migration.sh  index.html  package-lock.json  package.json  setup-git.sh  tailwind.config.js  vite.config.ts
contracts/: deploy.sh
contracts/rotafi/: Cargo.toml
contracts/rotafi/src/: lib.rs
server/: index.js  models.js
server/middleware/: auth.js
server/routes/: auth.js  committees.js  users.js
src/: App.tsx  index.css
src/components/: Badges.tsx  CommitteeCard.tsx  EmptyState.tsx  Header.tsx  Logo.tsx  Modal.tsx  ProgressRing.tsx  Toaster.tsx  WalletBar.tsx
src/context/: AppContext.tsx
src/lib/: api.ts  contract.ts  supabase.ts  types.ts  uuid.ts  wallet.ts
src/pages/: CommitteeDetailPage.tsx  CreateCommitteePage.tsx  DashboardPage.tsx  ExplorePage.tsx  LandingPage.tsx  ProfilePage.tsx
supabase/migrations/: 20260717180451_chitfund_schema_v1_retry.sql
